@@ -65,15 +65,6 @@ confluence_views = [500,501,502,503,504,508]
 
 def TOPLEVELCATEGORIES():
 
-    #url = strUrl + '/sagex/api?command=GetInstalledPluginss&encoder=json'
-    url = strUrl + '/sagex/api?c=xbmc:GetXBMCJSVersionNumber&encoder=json'
-    xbmcjsVersion = executeSagexAPIJSONCall(url, "Result")
-    if(xbmcjsVersion != VERSION_XBMCJS_REQUIRED):
-        print "***xbmc.js version found=" + xbmcjsVersion + "; user must make sure they have the latest xbmc.js installed on their SageTV server (VERSION_XBMCJS_REQUIRED=" + VERSION_XBMCJS_REQUIRED + ")"
-        xbmcgui.Dialog().ok(__language__(21004),__language__(21045),__language__(21046),__language__(21047))
-        xbmc.executebuiltin('ActivateWindow(Home)')
-        return
-    
     url = strUrl + '/sagex/api?c=xbmc:GetPluginVersion&1=sagex-api-services&encoder=json'
     sagexVersion = executeSagexAPIJSONCall(url, "Result")
 
@@ -93,7 +84,6 @@ def TOPLEVELCATEGORIES():
         
     print "Successfully able to connect to the SageTV server @ " + __settings__.getSetting("sage_ip") + ':' + __settings__.getSetting("sage_port")
  
-    print "TOPLEVELCATEGORIES STARTED; xbmc.js file version=" + xbmcjsVersion + ";sagex-api-services version=" + sagexVersion
     if(sagexVersion == ""):
         xbmcgui.Dialog().ok(__language__(21004),__language__(21005) + " " + MIN_VERSION_SAGEX_REQUIRED, __language__(21006),__language__(21007))
         xbmc.executebuiltin('ActivateWindow(Home)')
@@ -102,6 +92,16 @@ def TOPLEVELCATEGORIES():
         xbmcgui.Dialog().ok(__language__(21004),__language__(21005) + " " + MIN_VERSION_SAGEX_REQUIRED, __language__(21008) + " " + sagexVersion,__language__(21009) + " " + MIN_VERSION_SAGEX_REQUIRED)
         xbmc.executebuiltin('ActivateWindow(Home)')
         return
+
+    url = strUrl + '/sagex/api?c=xbmc:GetXBMCJSVersionNumber&encoder=json'
+    xbmcjsVersion = executeSagexAPIJSONCall(url, "Result")
+    if(xbmcjsVersion != VERSION_XBMCJS_REQUIRED):
+        print "***xbmc.js version found=" + xbmcjsVersion + "; user must make sure they have the latest xbmc.js installed on their SageTV server (VERSION_XBMCJS_REQUIRED=" + VERSION_XBMCJS_REQUIRED + ")"
+        xbmcgui.Dialog().ok(__language__(21004),__language__(21045),__language__(21046),__language__(21047))
+        xbmc.executebuiltin('ActivateWindow(Home)')
+        return
+    
+    print "TOPLEVELCATEGORIES STARTED; xbmc.js file version=" + xbmcjsVersion + ";sagex-api-services version=" + sagexVersion
 
     addTopLevelDir('1. Watch Recordings', strUrl + '/sagex/api?c=xbmc:GetTVMediaFilesGroupedByTitle&size=500&encoder=json',1,IMAGE_POSTER,'Browse previously recorded and currently recording shows')
     addTopLevelDir('2. View Upcoming Recordings', strUrl + '/sagex/api?command=GetScheduledRecordings&encoder=json',2,IMAGE_POSTER,'View and manage your upcoming recording schedule')
